[project]
name = "datahelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pyside6>=6.9.1",
    "rich>=14.0.0",
    "typer>=0.20.0",
    "ultralytics<=8.3.43", # 8.3.43 以上的版本有关键点补偿
]

# https://github.com/astral-sh/uv/issues/12270
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = ["tools"]


# https://docs.astral.sh/uv/guides/integration/pytorch/#configuring-accelerators-with-optional-dependencies
# `uv sync --extra cpu` or `uv sync --extra cu118`
[project.optional-dependencies]
cpu = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
cu118 = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu118" }
    ]
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" }
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
