[project]
name = "datahelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "click>=8.3.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pyside6>=6.9.1",
    "rich>=14.0.0",
    "typer>=0.20.0",
    "ultralytics<=8.3.43",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

# https://docs.astral.sh/uv/guides/integration/pytorch/#configuring-accelerators-with-optional-dependencies
# 如果要根据需求来选择 cpu 还是 cuda 版本，参考上面的链接
# 但后续的运行需要加上指定要使用的办法，比如 `uv run --extra cu118 foo.py`
[tool.uv.sources]
torch = [
    { index = "pytorch-cu118" }
]
torchvision = [
    { index = "pytorch-cu118" }
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true


# https://github.com/astral-sh/uv/issues/12270
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
# 在 vscode 中使用 jupyter, 需要安装 ipykernel, uv add --dev ipykernel
dev = [
    "ipykernel>=7.1.0",
]

[tool.uv.build-backend]
module-root = ""
module-name = ["tools"]
